<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewsSharer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cant_handle_intent">Can\'t handle the intent</string>
    <string name="ok">Ok</string>
    <string name="not_a_valid_url">Not a valid url</string>
    <string name="loading">Loading</string>
    <string name="please_select_quote">Please, select some text and tap next.</string>
    <string name="loading_page_error">An error occured while loading the page</string>
    <string name="add_new">Add</string>
    <string name="people">People</string>
    <string name="quote">Quote</string>
    <string name="tags">Tags</string>
    <string name="topics">Topics</string>
    <string name="please_wait">Please wait</string>
    <string name="cant_contact_backend">Can\'t contact backend</string>
    <string name="error_parsing_backend_response">Error parsing JSON</string>
    <string name="change">Change</string>
    <string name="angela_merkel">Angela Merkel</string>
    <string name="chancellor_of_germany">Chancellor of Germany</string>
    <string name="president_of_united_states">44th President of the United States</string>
    <string name="president_of_russia">President of Russia</string>
    <string name="president_of_france">President of France</string>
    <string name="submit">Submit</string>
    <string name="need_a_topic_and_a_person">Need at least one topic and one person</string>
    <string name="posting">Your date are being submitted to our backend, please wait.</string>
    <string name="error_sending">Error sending your data. Please, retry.</string>
    <string name="post_completed">Your data was successfully submitted</string>

</resources>
